--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "slim/http": "^1.3",
         "slim/php-view": "^3.2",
         "php-di/php-di": "^7.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
