--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         "slim/slim": "^4.12",
         "slim/psr7": "^1.6",
         "phpunit/phpunit": "^9.6",
-        "slim/twig-view": "^3.3",
         "slim/http": "^1.3",
         "slim/php-view": "^3.2",
         "php-di/php-di": "^7.0",
         "slim/flash": "^0.4.0",
         "nesbot/carbon": "^2.71",
         "guzzlehttp/guzzle": "^7.8",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
