--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "guzzlehttp/guzzle": "^7.0",
         "vlucas/valitron": "^1.4",
         "ext-pdo": "*",
-        "imangazaliev/didom": "^2.0"
+        "imangazaliev/didom": "^2.0",
+        "illuminate/support": "^10.42"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
